# portfolio-ai

./: .coderabbit.yaml  .dockerignore  .env.example  .gitattributes  .gitignore  .index.yaml  .last_doc_update  .mcp.json  .mcp.json.template  .pre-commit-config.yaml  AGENT-2-FINAL-REPORT.md  AGENT-3-REPORT.md  AGENT-4-REPORT.md  AGENT-INSTRUCTIONS.md  AGENTS.md  AGENT_AUDIT.md  CHANGES_FROM_MARKET_SIM.md  CLOUD-AGENT-START-HERE.md  CLOUD_HANDOFF_PART1.md  CLOUD_HANDOFF_PART2.md  CODE_DUPLICATION_REPORT_2025-11-07.md  CODE_REVIEW_2025-11-07.md  COMPREHENSIVE_CODE_REVIEW_2025-11-07.md  CONTRIBUTING.md  FOLDER-REORGANIZATION-SUMMARY.md  GEMINI.md  GETTING_STARTED.md  KNOWN_TEST_ISSUES.md  MERGE_VERIFICATION.md  NOTICE  POSTGRESQL_PROFILE_ANALYSIS.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  RESOURCE_ALLOCATION_ANALYSIS.md  RESUME_NEXT_SESSION.md  SECURITY.md  SERVICES.md  SETTINGS_IMPROVEMENTS_HANDOFF.md  SETUP-PROMPT.md  (+18 more)
backend/: .coverage  .gitignore  =0.3.14b  =2.0.7  =3.7.0  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  pytest.ini  reproduce_freshness_bug.py  requirements-pinned.txt  requirements.txt
backend/alembic/: baseline.sql  env.py
backend/alembic/versions/: 0f6e91c2a8d4_add_ppi_market_event_type.py  10b1de025fa4_add_automation_preference_overrides.py  1a2b3c4d5e6f_add_agentic_background_preferences.py  1fcb5bc8b2cb_add_canonical_household_accounts.py  217b5c166647_drop_celery_tables.py  22358991bf43_add_household_confirmed_facts_table.py  281842054872_add_household_planning_data_layer.py  2b3c4d5e6f70_add_strategy_research_background_pref.py  3fe8bfbc8d98_add_household_finance_foundation.py  4af7233ad813_add_symbol_workflow_state_tables.py  4d7d4a8cc18a_add_unique_news_cache_symbol_hash.py  7c39a23c677c_add_account_spouse_flag.py  (+88 more)
backend/app/: celery_app.py  celery_schedules.py  constants.py  hatchet_app.py  logging_config.py  main.py  worker.py
backend/config/: postgresql-logging.conf
backend/migrations/: 001_create_schema_migrations_table.sql  001_maintenance_log.sql  001a_fix_maintenance_log_timezone.sql  002_add_celery_task_id.sql  003_add_display_timezone.sql  006_timezone_and_uuid_fixes.sql  008_narrative_intelligence.sql  010_news_cache_rebuild.sql  011_news_lookback_preference.sql  014_sec_cik_cache.sql  015_sec_filing_metadata.sql  016_fear_greed_index.sql  016_story_clustering.sql  018_watchlist_account_separation.sql  020_fundamental_cache.sql  021_drop_unused_fundamental_cache.sql  023_settings_profiles.sql  024_deletion_audit.sql  025_source_metrics.sql  033_options_market_metrics.sql  035_celery_capabilities.sql  037_capability_insights.sql  038_capability_notes.sql  040_trading_gaps.sql  041_valuation_metrics.sql  045_extend_maintenance_system.sql  047_strategy_definitions.sql  049_portfolio_covariance.sql  053_idea_outcomes_backtest_metrics.sql  054_drop_minute_bars.sql  057_strategy_metrics_full.sql  059_standardize_symbol_columns.sql  060_remaining_ticker_columns.sql  062_sec_cik_cache_symbol.sql  063_fix_insight_duplicates.sql  064_price_cache_bid_ask.sql  066_financial_health_scores.sql  070_split_watchlist_snapshots.sql  071_split_reference_cache.sql  072_backtest_benchmark_fields.sql  (+32 more)
backend/migrations-archive/: 0004_audit_quick_wins_indexes.sql  002_watchlist_preferences.sql  004_add_is_stale_column.sql  005_refresh_controls.sql  007_populate_table_registry.sql  009_watchlist_intelligence_2.sql  012_news_max_articles_preference.sql  017_news_impact_insights.sql  019_score_weight_sliders.sql  022_watchlist_source_tracking.sql  026_user_article_feedback.sql  027_source_quality_preferences.sql  028_sentiment_override.sql  030_ml_model_metrics.sql  030a_fix_ml_model_metrics_timezone.sql  031_ml_training_progress.sql  032_news_quality_predictions.sql  034_db_capabilities.sql  036_api_capabilities.sql  039_capability_health_status.sql  042_backtest_tables.sql  043_paper_trading_cash.sql  044_multi_agent_collaboration.sql  046_agent_runs_cli_telemetry.sql  047_strategy_definitions.sql  048_remove_maintenance_log_task_name_constraint.sql  050_portfolio_snapshots.sql  051_earnings_surprises.sql  052_strategy_trade_linking.sql  055_idea_outcomes_backtest_run.sql  056_dual_review_columns.sql  058_symbols_table.sql  061_add_symbol_fk_constraints.sql  065_analyst_revisions.sql  067_risk_metrics.sql  068_fundamental_data_tables.sql  069_fundamental_tables_fk.sql  073_fix_news_primary_articles_index.sql  079_feature_capabilities.sql  081_feature_layers.sql  (+23 more)
backend/models/: article_quality_v1.joblib  article_quality_v20251111.joblib  article_quality_v20251112.joblib  article_quality_v20251113.joblib  article_quality_v20251114.joblib  article_quality_v20251115.joblib  article_quality_v20251117.joblib  article_quality_v20251122.joblib  article_quality_v20251125.joblib  article_quality_v20251126.joblib  article_quality_v20251127.joblib  article_quality_v20251129.joblib  article_quality_v20260630.joblib
backend/portfolio_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: .capabilities_scan.json  CAPABILITIES_API_EXAMPLES.md  CAPABILITIES_SCAN_README.md  backfill_fear_greed.py  bootstrap_finbert.py  capabilities-ui-mockup.md  health_report.py  migrate.py  populate_watchlist_data.py  run_maintenance.py  scan_capabilities.py  seed-default-data.py  setup-test-db.sh  update_fear_greed_inputs.py
backend/tests/: README.md  __init__.py  conftest.py  test_agent_tools.py  test_api_analytics.py  test_api_ideas.py  test_api_market.py  test_api_portfolio.py  test_api_preferences.py  test_api_watchlist.py  test_discovery_agent.py  test_finnhub_source.py  test_fmp_source.py  test_hatchet_app.py  test_indicators.py  test_integration_portfolio_crud.py  test_jsonpath_mapper.py  test_logging_config.py  test_multi_source.py  test_multi_source_price_fetcher.py  test_portfolio_analytics.py  test_portfolio_analyzer.py  test_portfolio_manager.py  test_price_fetcher.py  test_storage_schema.py  test_twelvedata_source.py  test_yfinance_source.py
services/dev-companion/: README.md  pyproject.toml
(+2900 files in other folders)
