[project]
name = "portfolio-ai"
version = "0.1.0"
description = "AI-Led Portfolio Intelligence Platform"
requires-python = ">=3.13"
dependencies = [
    # Core API framework
    "fastapi==0.124.4",
    "uvicorn==0.38.0",
    "pydantic==2.12.5",
    "starlette==0.50.0",

    # Database & data processing
    "sqlalchemy==2.0.45",
    "psycopg2-binary==2.9.11",
    "polars==1.36.1",
    "pandas==2.3.3",
    "numpy==2.3.5",
    "pyarrow==22.0.0",

    # Data sources & API clients
    "yfinance==0.2.66",
    "requests==2.32.5",
    "feedparser==6.0.12",
    "anthropic==0.75.0",
    "httpx==0.28.1",

    # Background tasks
    "celery==5.6.0",
    "redis==7.1.0",
    "amqp==5.3.1",
    "kombu==5.6.1",
    "billiard==4.2.4",
    "vine==5.1.0",

    # Utilities
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "python-json-logger==4.0.0",
    "structlog==25.5.0",
    "tenacity==9.1.2",
    "click==8.3.1",

    # Technical indicators
    "pandas-ta==0.4.71b0",
    "numba==0.63.1",

    # NLP / Sentiment
    "transformers==4.57.3",
    "torch==2.9.1",
    "huggingface-hub==0.34.0",
]

[project.optional-dependencies]
dev = [
    # Development tools
    "python-dotenv==1.2.1",
    "rich==14.2.0",

    # Testing
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "coverage==7.13.0",

    # Linting & type checking
    "ruff==0.14.9",
    "mypy==1.19.0",
    "types-PyYAML==6.0.12.20250915",
    "types-requests==2.32.4.20250913",
    "pandas-stubs==2.3.3.251201",
    "celery-types>=0.24.0",

    # Code quality metrics (/audit_it command)
    "radon==6.0.1",
    "pip-audit==2.10.0",

    # Pre-commit
]

[tool.setuptools]
packages = ["app"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize Python code)
    "B",      # flake8-bugbear (find likely bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return (simplify return statements)
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib (prefer pathlib over os.path)
    "ERA",    # eradicate (find commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments to function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "RET504",  # Unnecessary variable assignment before return
    "SIM108",  # Use ternary operator (not always clearer)
    "ARG001",  # Unused function argument (common in CLI commands)
    "ARG002",  # Unused method argument (common in abstract methods)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/main.py" = ["ARG001", "E402"]
"tests/**/*.py" = ["PLC0415", "F841", "RUF043"]  # Test-specific: imports in fixtures, unused vars, raw regex in pytest.raises
"app/api/**/*.py" = ["B008"]  # FastAPI Depends/Query in argument defaults is intentional
"app/tasks/**/*.py" = ["PLC0415"]  # Task-specific: lazy imports to avoid circular dependencies
"app/agents/**/*.py" = ["PLC0415", "PLR0911"]  # Agent-specific: lazy imports, many return statements in tool executors
"app/watchlist/scoring_service/__init__.py" = ["PLC0415", "PLR0911"]  # Lazy loading pattern via __getattr__

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "edgar", "edgar.*",
    "sklearn", "sklearn.*",
    "sentence_transformers", "sentence_transformers.*",
    "psycopg2", "psycopg2.*",
    "joblib", "joblib.*",
    "yfinance", "yfinance.*",
    "yahooquery", "yahooquery.*",
    "agent_hub", "agent_hub.*",
    "dotenv", "dotenv.*",
    "transformers", "transformers.*",
    "torch", "torch.*",
    "pandas_ta", "pandas_ta.*",
    "feedparser", "feedparser.*",
    "vaderSentiment", "vaderSentiment.*",
    "dateutil", "dateutil.*",
    "pandas", "pandas.*",
    "cachetools", "cachetools.*",
    "scipy", "scipy.*",
]
ignore_missing_imports = true






