[project]
name = "portfolio-ai"
version = "0.1.0"
description = "AI-Led Portfolio Intelligence Platform"
requires-python = ">=3.13,<3.14"
license = "Apache-2.0"
dependencies = [
    # Core API framework
    "fastapi==0.136.3",
    "uvicorn==0.38.0",
    "pydantic==2.13.4",
    "starlette==1.3.1",
    # Database & data processing
    "alembic>=1.13.0",
    "sqlalchemy==2.0.45",
    "psycopg[binary]==3.3.2",
    "polars[rtcompat]==1.36.1",
    "pandas==2.3.3",
    "numpy==2.2.6",
    "pyarrow==23.0.1",
    "joblib==1.5.3",
    "scikit-learn==1.8.0",
    # Data sources & API clients
    "yfinance==0.2.66",
    "plaid-python==39.1.0",
    "requests>=2.33.0",
    "feedparser==6.0.12",
    "httpx==0.28.1",
    "python-multipart>=0.0.32",
    "agent-hub-client==0.4.0",
    "cachetools==5.5.0",
    # Caching & message broker
    "redis==7.1.0",
    # Workflow orchestration
    "hatchet-sdk==1.33.9",
    # Configuration
    "pydantic-settings==2.14.2",
    "python-dotenv>=1.0.0",
    "pypdf>=6.13.3",
    "pypdfium2>=5.6.0",
    "Pillow>=12.2.0",
    "rapidocr_onnxruntime>=1.2.3",
    # Utilities
    "cryptography>=48.0.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "python-json-logger==4.0.0",
    "structlog==25.5.0",
    "tenacity==9.1.2",
    "psutil==5.9.8",
    # Technical indicators
    "pandas-ta==0.4.71b0",
    # NLP / Sentiment
    "vaderSentiment>=3.3.2",
    "snaptrade-python-sdk>=11.0.195",
    # MCP server (stdio transport for Claude Code / Codex CLI tie-in)
    "mcp>=1.0.0",
    "openpyxl>=3.1.5",
    "httpx2>=2.5.0",
]

[project.scripts]
portfolio-ai-mcp = "app.mcp_server.__main__:main"

[project.optional-dependencies]
dev = [
    # Development tools
    "rich==14.2.0",

    # Testing - Core
    "pytest==9.0.3",
    "pip>=26.1.2",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "pytest-xdist==3.8.0",
    "coverage==7.13.0",
    # Testing - Essential Plugins
    "pytest-mock==3.15.1",
    "pytest-timeout==2.4.0",
    "pytest-randomly==3.16.0",

    # Linting & type checking
    "ruff==0.15.0",
    "ty>=0.0.17",
    "types-PyYAML==6.0.12.20250915",
    "types-requests==2.32.4.20250913",
    "pandas-stubs==2.3.3.251201",
    # Code quality metrics (/audit_it command)
    "radon==6.0.1",
    "pip-audit==2.10.0",

    # Pre-commit
]
[tool.uv]
# Keep Pygments on a fixed security floor; 2.20.0 is a published PyPI release and addresses known pre-2.20 vulnerabilities.
constraint-dependencies = [
    "curl-cffi>=0.15.0",
    "mako>=1.3.12",
    "pygments>=2.20.0",
    "pyjwt>=2.13.0",
]

[tool.uv.sources]
agent-hub-client = { path = "../docker/workspace-packages/agent_hub_client-0.4.0-py3-none-any.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize Python code)
    "B",      # flake8-bugbear (find likely bugs)
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return (simplify return statements)
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib (prefer pathlib over os.path)
    "ERA",    # eradicate (find commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",    # Line too long (handled by formatter)
    "PLR0913", # Too many arguments to function call
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "RET504",  # Unnecessary variable assignment before return
    "SIM108",  # Use ternary operator (not always clearer)
    "ARG001",  # Unused function argument (common in CLI commands)
    "ARG002",  # Unused method argument (common in abstract methods)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"app/main.py" = ["ARG001", "E402"]
"tests/**/*.py" = ["PLC0415", "F841", "RUF043"]  # Test-specific: imports in fixtures, unused vars, raw regex in pytest.raises
"app/api/**/*.py" = ["B008"]  # FastAPI Depends/Query in argument defaults is intentional
"app/tasks/**/*.py" = ["PLC0415"]  # Task-specific: lazy imports to avoid circular dependencies
"app/agents/**/*.py" = ["PLC0415", "PLR0911"]  # Agent-specific: lazy imports, many return statements in tool executors
"app/watchlist/scoring_service/__init__.py" = ["PLC0415", "PLR0911"]  # Lazy loading pattern via __getattr__
"app/hatchet_app.py" = ["PLC0415"]  # Lazy import for deferred SDK initialization
"app/workflows/*.py" = ["PLC0415"]  # Workflow-specific: lazy imports to avoid circular dependencies
"app/worker.py" = ["ERA001"]  # Section comments in workflow registration list

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ty.rules]
# Suppress beta-quality rules (ty 0.0.x false positives)
# Remove these as ty matures past 0.1
invalid-argument-type = "ignore"
unknown-argument = "ignore"
unresolved-import = "ignore"
no-matching-overload = "ignore"   # dict.get() with non-matching default types
unresolved-attribute = "ignore"   # polars pl.DataFrame, Callable.__name__
unsupported-operator = "ignore"   # rowcount comparisons on cursor results
