[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-companion"
version = "0.1.0"
description = "Web interface for Claude Code with browser context integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.25.0",
    "websockets>=12.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["dev_companion"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
